# nsplindia

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
nelito_finance/: .editorconfig  hooks.py  install.py  pyproject.toml  setup.py
nelito_finance/api/: scheduled_jobs.py
nelito_finance/doctype/orf_item/: orf_item.py
nelito_finance/nelito_finance/: hooks.py  install.py  modules.txt  patches.txt
nelito_finance/nelito_finance/api/: expense_hooks.py  project_hooks.py  scheduled_jobs.py  task_hooks.py  utils.py
nelito_finance/nelito_finance/config/: desktop.py
nelito_finance/nelito_finance/doctype/order_review_form/: order_review_form.js  order_review_form.json  order_review_form.py  test_order_review_form.py
nelito_finance/nelito_finance/doctype/orf_item/: orf_item.json
nelito_finance/nelito_finance/public/js/: project_custom.js
nelito_finance/nelito_finance/report/contract_overview/: contract_overview.js  contract_overview.json
nelito_finance/nelito_finance/report/milestone_billing_tracker/: milestone_billing_tracker.js  milestone_billing_tracker.json  milestone_billing_tracker.py
nelito_finance/public/js/: project_custom.js
nelito_finance/report/contract_overview/: contract_overview.py
nelito_finance/workspace/nelito_finance/: nelito_finance.json
