[project]
name = "nelito_finance"
authors = [
    { name = "Nelito Systems Pvt. Ltd.", email = "info@nelito.com" }
]
description = "Revenue Management, Project Accounting & Milestone Billing"
requires-python = ">=3.11"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0-dev"
erpnext = ">=16.0.0-dev,<17.0.0-dev"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
